--- a/core/templates/clientes/clientes_detalles.html
+++ b/core/templates/clientes/clientes_detalles.html
@@ -212,7 +212,11 @@
             </div>
         </div>
         <div class="button-container">
-            
+            <a href="#" class="btn btn-primary">Editar</a> <!-- -->
+    
+             <!-- Botón (Borrar) -->
+            <a href="{% url 'cliente_borrar' cliente.id %}" class="btn btn-danger">Eliminar</a>
+
         </div>
     </div>
 </div>
