--- a/core/templates/prestamos/prestamos.html
+++ b/core/templates/prestamos/prestamos.html
@@ -63,7 +63,7 @@
             <table class="table table-bordered">
                 <thead>
                     <tr>
-                        <th class="th sort-both">ID</th>
+                        <th class="th sort-both">Detalles</th>
                         <th class="th sort-both">Cliente</th>
                         <th class="th sort-both">Fecha de Préstamo</th>
                         <th class="th sort-both">Fecha de Pago</th>
@@ -75,7 +75,7 @@
                 <tbody id="pagadosTableBody">
                     {% for prestamo in prestamos_pagados %}
                     <tr>
-                        <td>{{ prestamo.id }}</td>
+                        <td><a href="{% url 'prestamo_detalles' prestamo.id %}"> {{ prestamo.id }}</a></td>
                         <td>{{ prestamo.cliente.nombre }} {{ prestamo.cliente.apellido }}</td>
                         <td>{{ prestamo.fecha_prestamo }}</td>
                         <td>{{ prestamo.fecha_pago }}</td>
