--- a/core/templates/clientes/cliente_crear.html
+++ b/core/templates/clientes/cliente_crear.html
@@ -122,6 +122,11 @@
                             <button type="reset" class="btn btn-secondary">
                                 <i class="fas fa-eraser"></i> Limpiar Campos
                             </button>
+
+                            <!-- Boton de Volver -->
+                            <a type="cancel" href="{% url 'clientes' %}" class="btn btn-danger">
+                                 Cancelar
+                            </a>
                         </div>
                      </div>
                 </form>
