--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -3,17 +3,22 @@
 {% block content %}
 
 <div class="container-login">
-    <div class="login-card">
-        <h2>Iniciar Sesión</h2>
-        <form method="POST" action="{% url 'login' %}">
-            {% csrf_token %}
-            <div class="form-group">
-                {{ form.as_p }}
-            </div>
-            <div class="form-group text-center">
-                <button type="submit" class="btn btninfo">Login</button>
-            </div>
-        </form>
+    <div class="group-center">
+        <div class="card-login">
+            <h2>Iniciar Sesión</h2>
+            <form action="{% url 'login' %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
+                    <label for="username">Usuario</label>
+                    <input type="text" id="username" name="username" placeholder="Ingresa tu usuario">
+                </div>
+                <div class="form-group">
+                    <label for="password">Contraseña</label>
+                    <input type="password" id="password" name="password" placeholder="Ingresa tu contraseña">
+                </div>
+                <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
+            </form>
+        </div>
     </div>
 </div>
 
