--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -27,7 +27,7 @@
                         <li><a href="{% url 'prestamos' %}">Prestamos</a></li>
                         <li><a href="#">Prestamos pagados</a></li>
                         <li><a href="#">Prestamos sin pagar</a></li>
-                        <li><a href="#">Registrar prestamo</a></li>
+                        <li><a href="{% url 'prestamo_crear' %}">Registrar prestamo</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Clientes</a>
