--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -32,8 +32,8 @@
                 </li>
                 <li><a href="#">Clientes</a>
                     <ul class="submenu">
-                        <li><a href="#">Clientes</a></li>
-                        <li><a href="#">Registrar cliente</a></li>
+                        <li><a href="{% url 'clientes' %}">Clientes</a></li>
+                        <li><a href="{% url 'cliente_crear' %}">Registrar cliente</a></li>
                     </ul>
                 </li>
                 <li><a href="#">Pagos</a>
