--- a/core/templates/prestamos/prestamo_crear.html
+++ b/core/templates/prestamos/prestamo_crear.html
@@ -79,7 +79,7 @@
                         </button>
 
                         <!-- Boton de Volver -->
-                        <a type="cancel" href="{% url 'clientes' %}" class="btn btn-danger">
+                        <a type="cancel" href="{% url 'prestamos' %}" class="btn btn-danger">
                                 Cancelar
                         </a>
                     </div>
