--- a/core/templates/prestamos/prestamo_detalles.html
+++ b/core/templates/prestamos/prestamo_detalles.html
@@ -42,7 +42,7 @@
         <!-- Botones de Acción -->
         <div class="button-container">
             <a href="{% url 'prestamo_editar' prestamo.id %}" class="btn btn-primary">Editar</a>
-            <a href="#" class="btn btn-danger">Eliminar</a>
+            <a href="{% url 'prestamo_borrar' prestamo.id %}" class="btn btn-danger">Eliminar</a>
             <a href="{% url 'prestamos' %}" class="btn btn-secondary">Volver a la Lista</a>
         </div>
     </div>
