--- a/core/templates/layouts/base.html
+++ b/core/templates/layouts/base.html
@@ -25,7 +25,7 @@
                 <li><a href="#">Préstamos</a>
                     <ul class="submenu">
                         <li><a href="{% url 'prestamos' %}">Prestamos</a></li>
-                        <li><a href="#">Prestamos pagados</a></li>
+                        <li><a href="{% url 'prestamos_pagados' %}">Prestamos pagados</a></li>
                         <li><a href="{% url 'prestamos_sin_pagar' %}">Prestamos sin pagar</a></li>
                         <li><a href="{% url 'prestamo_crear' %}">Registrar prestamo</a></li>
                     </ul>
