--- a/core/templates/prestamos/prestamos_sin_pagar.html
+++ b/core/templates/prestamos/prestamos_sin_pagar.html
@@ -7,7 +7,7 @@
         <h2>Préstamos Sin Pagar</h2>
         <div style="display: grid; grid-template-columns: 1fr auto; margin-bottom: 10px;">
             <div>
-                <a href="{% url 'prestamo_crear'%}" class="btn btn-primary">Registrar un cliente</a>
+                <a href="{% url 'prestamo_crear'%}" class="btn btn-primary">Registrar un prestamo</a>
             </div>
         <input type="text" id="searchInputSinPagar" placeholder="Buscar por cliente..." class="form-control" style="margin-bottom: 10px; max-width: 100%; ">
         </div>
@@ -47,6 +47,141 @@
     </div>
 </div>
 <script>
+ // funcion para campo de busqueda
+ document.addEventListener('DOMContentLoaded', () => {
+    const searchInput = document.getElementById('searchInputSinPagar');
+    const tableBody = document.getElementById('sinpagarTableBody');
 
+    searchInput.addEventListener('input', function() {
+        const filter = searchInput.value.toLowerCase();
+        const rows = tableBody.getElementsByTagName('tr');
+
+        for (let i = 0; i < rows.length; i++) {
+            const cells = rows[i].getElementsByTagName('td');
+            let found = false;
+
+            for (let j = 0; j < cells.length; j++) {
+                const cell = cells[j];
+                if (cell) {
+                    const textValue = cell.textContent || cell.innerText;
+                    if (textValue.toLowerCase().indexOf(filter) > -1) {
+                        found = true;
+                        break;
+                    }
+                }
+            }
+
+            if (found) {
+                rows[i].style.display = ""; // Muestra la fila
+            } else {
+                rows[i].style.display = "none"; // Oculta la fila
+            }
+        }
+    });
+});
+
+// paginacion tabla sin pagar
+document.addEventListener('DOMContentLoaded', () => {
+    const filasPorPagina = 20; // Número de filas por página
+    const tablaBody = document.getElementById('sinpagarTableBody');
+    const filas = tablaBody.getElementsByTagName('tr');
+    const paginacion = document.getElementById('sinpagar-paginacion');
+
+    // Función para mostrar una página específica
+    function mostrarPagina(pagina) {
+        // Ocultar todas las filas
+        for (let i = 0; i < filas.length; i++) {
+            filas[i].style.display = 'none';
+        }
+
+        // Mostrar solo las filas de la página actual
+        const inicio = (pagina - 1) * filasPorPagina;
+        const fin = inicio + filasPorPagina;
+        for (let i = inicio; i < fin && i < filas.length; i++) {
+            if (filas[i].cells.length === 6) { // Ignorar la fila "No hay pagos registrados."
+                filas[i].style.display = '';
+            }
+        }
+    }
+
+    // Función para generar los botones de paginación
+    function generarBotonesPaginacion() {
+        const totalPaginas = Math.ceil(filas.length / filasPorPagina); // Calcular el número de páginas
+        paginacion.innerHTML = ''; // Limpiar los botones anteriores
+
+        for (let i = 1; i <= totalPaginas; i++) {
+            const enlace = document.createElement('a');
+            enlace.textContent = i;
+            enlace.href = '#'; // Establecer el atributo href para que se comporte como un enlace
+            enlace.addEventListener('click', (e) => {
+                e.preventDefault(); // Evitar que el enlace recargue la página
+                cambiarPagina(i);
+            });
+            paginacion.appendChild(enlace);
+        }
+    }
+
+    // Función para cambiar de página
+    function cambiarPagina(pagina) {
+        mostrarPagina(pagina);
+    }
+
+    // Generar los botones de paginación y mostrar la primera página
+    generarBotonesPaginacion();
+    mostrarPagina(1);
+});
+
+ // script para ordenar las tablas
+ document.addEventListener('DOMContentLoaded', () => {
+    const tables = document.querySelectorAll('table.table'); // Selecciona todas las tablas
+
+    tables.forEach(table => {
+        let sortOrder = {};
+        const thElements = table.querySelectorAll('th');
+
+        thElements.forEach((th) => {
+            th.addEventListener('click', (event) => {
+                event.preventDefault();
+                const columnIndex = Array.prototype.indexOf.call(th.parentNode.children, th);
+                const columnName = th.textContent.trim();
+                // Toggle sort order
+                if (!sortOrder[columnName]) {
+                    sortOrder[columnName] = 'asc';
+                } else if (sortOrder[columnName] === 'asc') {
+                    sortOrder[columnName] = 'desc';
+                } else {
+                    sortOrder[columnName] = 'asc';
+                }
+                // Update class
+                th.className = th.className.replace(/sort-asc|sort-desc/, `sort-${sortOrder[columnName]}`);
+
+                // Call sortTable function
+                sortTable(table, columnIndex, sortOrder[columnName]);
+            });
+        });
+
+        function sortTable(table, columnIndex, sortOrder) {
+            var rows = Array.prototype.slice.call(table.querySelectorAll('tbody tr'));
+            rows.sort(function(rowA, rowB) {
+                var cellA = rowA.cells[columnIndex].textContent;
+                var cellB = rowB.cells[columnIndex].textContent;
+                // Handle numerical values
+                if (!isNaN(cellA) && !isNaN(cellB)) {
+                    return cellA - cellB;
+                }
+                // Default to string comparison
+                return cellA.localeCompare(cellB);
+            });
+            // Sort order
+            if (sortOrder === 'desc') {
+                rows.reverse();
+            }
+            // Update the table
+            rows.forEach(function(row) {
+                table.querySelector('tbody').appendChild(row);
+            });
+        }
+    });
+});
 </script>
 {% endblock content %}
